--- a/css/front-style.css
+++ b/css/front-style.css
@@ -186,14 +186,16 @@ Style the video: 100% width and height to cover the entire window */
 
 .wrapper section a {
   position: absolute;
-  color: #3da9db;
+  color: #3abdfa;
   text-decoration: none;
   font-size: 6em;
+  line-height: 0.7em;
   background: #000;
   width: 80px;
   padding: 20px;
   text-align: center;
   z-index: 1;
+  text-shadow: 0px 0px 5px #000;
 }
 .wrapper section a:nth-of-type(1) {
   top: 0;
